# pdm-bench

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml  ml_config.yaml
config/dataset/: cwru.yaml  pu.yaml
config/hydra/sweeper/: ml_benchmark.yaml  ml_cwru_benchmark.yaml  ml_pu_benchmark.yaml  none.yaml
config/task/: cwru_cross_fault_instance.yaml  cwru_cross_fs.yaml  cwru_cross_load.yaml  none.yaml  pu_cross_bearing_instance.yaml  pu_cross_damage_provenance.yaml  pu_cross_operating_condition.yaml
config/task/cwru_cross_fault_instance/: cnn1d.yaml  fft.yaml  mlp.yaml  stft.yaml
config/task/cwru_cross_fs/: cnn1d.yaml  fft.yaml  mlp.yaml  stft.yaml
config/task/cwru_cross_load/: cnn1d.yaml  fft.yaml  mlp.yaml  stft.yaml
config/task/pu_cross_bearing_instance/: cnn1d.yaml  fft.yaml  mlp.yaml  stft.yaml
config/task/pu_cross_damage_provenance/: cnn1d.yaml  fft.yaml  mlp.yaml  stft.yaml
config/task/pu_cross_operating_condition/: cnn1d.yaml  fft.yaml  mlp.yaml  stft.yaml
scripts/: compare_benchmark_runs.py  download_datasets.sh  run_phm_benchmark.sh  run_phm_followup_dl.sh  summarize_benchmark.py  summarize_followup_dl.py
src/pdm_bench/: __init__.py
src/pdm_bench/evaluation/: prediction.py
src/pdm_bench/loaders/: __init__.py  cwru.py  pu.py
src/pdm_bench/signals/: __init__.py  dataset.py  feature_extractor.py  features_config.py  indicators.py  views.py
src/pdm_bench/tracking/: __init__.py  mlflow_tracker.py  noop_tracker.py  tracker.py
src/pdm_bench/training/: __init__.py  ml_classifiers.py
tests/: test_indicators.py  test_scaler.py  test_tracking_mlflow.py  test_tracking_noop.py  test_utils.py
tests/evaluation/: test_artifacts.py  test_classification.py  test_dl.py  test_ml.py  test_prediction.py  test_schemas.py
tests/loaders/: test_cwru.py  test_pu.py
tests/main/: test_indicators.py  test_scaler.py  test_tracking_mlflow.py  test_tracking_noop.py  test_utils.py
tests/pipelines/: test_data_utils.py  test_dl_config.py  test_dl_hydra_presets.py  test_dl_pipeline_integration.py  test_dl_pipeline_smoke.py  test_io_utils.py  test_ml_config.py  test_ml_pipeline_integration.py  test_ml_pipeline_smoke.py
tests/signals/: conftest.py  test_dataset.py  test_feature_extractor.py  test_recordings.py  test_views.py
tests/training/: test_ml_classifiers.py
(+66 files in other folders)
